# RendererPlayground

./: .gitignore  CMakeLists.txt  bootstrap.py  compile-shaders.janet  compile_shaders.bat
Vulkan/: Vulkan.sln  Vulkan.vcxproj  Vulkan.vcxproj.filters
include/: app.hpp  camera.hpp  cube.hpp  demo.hpp  descriptors.hpp  frame_info.hpp  game_object.hpp  geometry.hpp  gfx_buffer.hpp  gfx_device.hpp  gravity.hpp  keyboard.hpp  model.hpp  pipeline.hpp  point_light_render_system.hpp  renderer.hpp  shader_module.hpp  sierpinski.hpp  simple_render_system.hpp  swap_chain.hpp  utils.hpp  window.hpp
shaders/: diffuse.frag  diffuse.frag.spv  diffuse.vert  diffuse.vert.spv  point_light.frag  point_light.frag.spv  point_light.vert  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
src/: app.cpp  camera.cpp  cube.cpp  descriptors.cpp  game_object.cpp  geometry.cpp  gfx_buffer.cpp  gfx_device.cpp  gravity.cpp  keyboard.cpp  main.cpp  model.cpp  pipeline.cpp  point_light_render_system.cpp  renderer.cpp  shader_module.cpp  sierpinski.cpp  simple_render_system.cpp  swap_chain.cpp  window.cpp
